--- a/css/main.css
+++ b/css/main.css
@@ -23,6 +23,10 @@ a:hover {
 	height:134px;
 }
 
+.goods {
+        height:134px;
+}
+
 .contact {
 	height:434px;
 }
@@ -59,11 +63,57 @@ textarea {
 }
 
 button {
-	border-radius:10px;
+        border: 1px solid #222222;
+        background-color: #FFFFFF;
+        color: #222222;
+        border-color: #222222;
+        padding: .5rem 2rem .5rem 2rem;
+        transition: background-color 300ms ease-out;
 }
+
+button:hover {
+        background-color: #222222;
+}
+
 
 label {
 	display:inline-block;
+}
+
+.shadowbox {
+  position: relative;
+  display: inline-block;
+  width: 180px;
+  height: 100px;
+  border-radius: 5px;
+  background-color: #fff;
+  box-shadow: 0 1px 2px rgba(0,0,0,0.15);
+  transition: all 0.3s cubic-bezier(0.165, 0.84, 0.44, 1);;
+  -webkit-transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
+}
+
+/* Create the hidden pseudo-element */
+/* include the shadow for the end state */
+.shadowbox:after {
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  opacity: 0;
+  box-shadow: 0 5px 15px rgba(0,0,0,0.3);
+  transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
+  -webkit-transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);;
+  top: 0;
+  left: 0;
+}
+
+.shadowbox:hover {
+  -webkit-transform: scale(1.2, 1.2);
+  transform: scale(1.2, 1.2)
+}
+
+.shadowbox:hover:after {
+  opacity: 1
 }
 
 /* Media Queries */
@@ -71,19 +121,17 @@ label {
 @media (max-width: 600px) {
   h1, h2 {
 	font-size:5em;
-}
+  }
 }
 
 @media (max-width: 450px) {
   h1, h2 {
 	font-size:4em;
-	}
-
+  }
 }
 
 @media (max-width: 1050px) {
   hr {
   	visibility:hidden;
   }
-
 }
